[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/UI/Carnet/Font/Font_CorpsTexte.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Tuto.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Carnet/Journal/texture_feuille.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Carnet/fleche_droite.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Tuto/tutopropre2.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Carnet/croix_normal.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Tuto/tutopropre1.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Carnet/croix_pressed.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/Tuto/tutopropre3.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/Carnet/fleche_gauche.png" type="Texture" id=10]

[node name="Commande" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 960, 540 )
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Page3" type="TextureRect" parent="CenterContainer"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 9 )

[node name="Page2" type="TextureRect" parent="CenterContainer"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 5 )

[node name="Page1" type="TextureRect" parent="CenterContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -65.0
size_flags_horizontal = 3
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumeroPage" type="Label" parent="MarginContainer"]
margin_top = 20.0
margin_right = 1920.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1/3"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -84.0
margin_bottom = 84.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quitter" type="TextureButton" parent="MarginContainer2"]
margin_top = 20.0
margin_right = 64.0
margin_bottom = 84.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -84.0
custom_constants/margin_right = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageSuivante" type="TextureButton" parent="MarginContainer3"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -84.0
margin_right = 84.0
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PagePrecedente" type="TextureButton" parent="MarginContainer4"]
margin_left = 20.0
margin_right = 84.0
margin_bottom = 64.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer2/Quitter" to="." method="_on_Quitter_pressed"]
[connection signal="button_down" from="MarginContainer3/PageSuivante" to="." method="_on_PageSuivante_button_down"]
[connection signal="pressed" from="MarginContainer4/PagePrecedente" to="." method="_on_PagePrecedente_pressed"]
